--- a/test/.themisrc
+++ b/test/.themisrc
@@ -1,5 +1,7 @@
 call themis#option('reporter', 'dot')
 
+call themis#log('compaible: ' . &compatible)
+call themis#log('cpoptions: ' . &cpoptions)
 call themis#log('sourced helpers:')
 for s:f in split(glob(expand('<sfile>:h') . '/helper/*.vim'), "\n")
   call themis#log('  ' . s:f)
