--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         os:
-          - ubuntu-latest
+          # Do not run tests on Ubuntu because not enough vim runtime is prepared.
           - macos-latest
           - windows-latest
 
