--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,14 @@
 name: CI
 on:
   push:
+    branches:
+      - main
   pull_request:
+    paths-ignore:
+      - doc/**
+      - misc/**
+      - LICENSE
+      - README.md
   schedule:
     - cron: 0 12 * * 5
 
